--- a/app/assets/stylesheets/_chat-side.scss
+++ b/app/assets/stylesheets/_chat-side.scss
@@ -8,18 +8,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    .user-name__top-items {
+    &__top-items {
       height: 20px;
       width: 260px;
       display: flex;
       align-items: center;
       justify-content: space-between;
-      .user-name__top-items__name {
+      &__name {
         font-size: 16px;
         color: white;
         font-weight: bold;
       }
-      .user-name__top-items__icons {
+      &__icons {
         width: 60px;
         display: flex;
         justify-content: flex-end;
@@ -28,18 +28,17 @@
         .icons {
           color: white;
         }
-        .user-name__top-items__icons-new-group {
+        &__icons-new-group {
         margin-left: 5px;
         }
       }
     }
-  }
   .group-list {
     height: calc(100vh - 100px);
     width: 300px;
     background-color: #2f3e51;
     padding: 20px;
-    .group-list-box {
+    &-box {
       width: 260px;
       margin-bottom: 40px;
       .group {
@@ -48,13 +47,14 @@
         text-decoration: none;
         height: 91px;
       }
-        .group-list-box__group-name {
+        &__group-name {
           font-size: 20px;
           margin-bottom: 5px;
         }
-        .group-list-box__group-message {
+        &__group-message {
           font-size: 11px;
         }
     }
     
   }
+}
