--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,7 +5,9 @@
 @import "./chat-side";
 @import "./chat-main";
 @import "./wrapper";
-
+@import "./colors";
+@import "./user";
+@import "./flash";
 
 
 
