--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,9 +5,10 @@
 @import "./chat-side";
 @import "./chat-main";
 @import "./wrapper";
-@import "./colors";
+@import "config/colors";
 @import "./user";
-@import "./flash";
+@import "module/flash";
+@import "./group";
 
 
 
