--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,24 +2,21 @@
   .user-name
     .user-name__top-items
       %p.user-name__top-items__name
-        ゆうたろう
+        =current_user.name
       %ul.user-name__top-items__icons
         %li.user-name__top-items__icons-edit-user
-          = link_to "#" do
-            = icon('fas', 'user-edit', class: 'icons')
+          = link_to new_group_path do
+            = icon('fas', 'pen-square', class: 'icons')
         %li.user-name__top-items__icons-new-group
-          = link_to "#" do
+          = link_to edit_user_path(current_user) do
             = icon('fas', 'cog', class: 'icons')
   .group-list
     .group-list-box
-      = link_to "#", class:"group" do
-        %p.group-list__group-name
-          Test
-        %p.group-list__group-message
-          まだメッセージがありません
-    .group-list-box
-      = link_to "#", class:"group" do
-        %p.group-list__group-name
-          Test
-        %p.group-list__group-message
-          まだメッセージがありません
+      - current_user.groups.each do |group|
+        .group
+          = link_to '#' do
+            .group__name
+              = group.name
+            .group__message
+              メッセージはまだありません。
+    
