--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -14,9 +14,9 @@
     .group-list-box
       - current_user.groups.each do |group|
         .group
-          = link_to '#' do
+          = link_to group_messages_path(group), class:"group" do
             .group__name
-              = group.name
+              = current_group
             .group__message
-              メッセージはまだありません。
+              = group.show_last_message
     
