--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -16,7 +16,7 @@
         .group
           = link_to group_messages_path(group), class:"group" do
             .group__name
-              = current_group
+              = group.name
             .group__message
               = group.show_last_message
     
