インクリメンタルサーチ実装
What
・1. ルーティングなどAPI側の準備をする
・2. テキストフィールドを作成する
・3. テキストフィールドに入力されるたびにイベントが発火するようにする
・4. イベント時に非同期通信できるようにする
・5. 非同期通信の結果を得て、HTMLを作成する
・6. 5で作成したHTMLをビュー上に追加する
・7. エラー時の処理を行う
Why
非同期で素早くメンバー追加表示をさせるため

--- a/app/assets/stylesheets/group.scss
+++ b/app/assets/stylesheets/group.scss
@@ -64,7 +64,7 @@ li {
     &:after {
       content: "";
       clear: both;
-      display: block;
+      display: flex;
     }
     &--left {
       float: left;
@@ -94,7 +94,6 @@ li {
     float: left;
   }
   &__btn {
-    float: right;
     display: inline-block;
     cursor: pointer;
     &--add {
